[gd_scene load_steps=16 format=3 uid="uid://mv4jvucavvcl"]

[ext_resource type="Script" uid="uid://dwf0kpkp3apbb" path="res://scenes/menus/main_menu.gd" id="1_ovrgc"]
[ext_resource type="Script" uid="uid://yji5fyd27trl" path="res://scripts_j/animation_component.gd" id="2_2o76q"]
[ext_resource type="Texture2D" uid="uid://c1kse6lu6wupg" path="res://Assets/Backgrounds/espacio de fondo_mall.png" id="2_ng0o5"]
[ext_resource type="Script" uid="uid://lbxnles05c12" path="res://scripts_j/float_UI_Component.gd" id="3_ng0o5"]
[ext_resource type="Texture2D" uid="uid://cbhyn7q46ocrn" path="res://Assets/Sprites/UI/clown (1).png" id="4_1hnlc"]
[ext_resource type="Texture2D" uid="uid://exxeld8j38u4" path="res://Assets/Sprites/UI/wood_panel.png" id="4_6bivr"]
[ext_resource type="Texture2D" uid="uid://dp4y47kd1bcgq" path="res://Assets/Sprites/UI/menu-3.png" id="4_8r73w"]
[ext_resource type="FontFile" uid="uid://depubakwitka0" path="res://Assets/Fonts/DoubleBass-Bold-trial.ttf" id="6_1hnlc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vue75"]
texture = ExtResource("2_ng0o5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_50h1w"]
texture = ExtResource("4_1hnlc")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1hnlc"]
texture = ExtResource("4_8r73w")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ovrgc"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2o76q"]
texture = ExtResource("4_6bivr")
region_rect = Rect2(0, 0, 48, 48)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2o76q"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6bivr"]
texture = ExtResource("4_6bivr")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ovrgc")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_vue75")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 252.0
offset_top = 38.0
offset_right = 292.0
offset_bottom = 61.0
script = ExtResource("3_ng0o5")
float_amplitude = Vector2(-8.3, -3.4)
float_speed = -1.3
hover_scale = 1.14
hover_time = 0.18

[node name="Panel2" type="Panel" parent="Label2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(9.91397, 9.03488)
theme_override_styles/panel = SubResource("StyleBoxTexture_50h1w")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -295.0
offset_top = 12.0
offset_right = 296.0
offset_bottom = 82.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_ng0o5")

[node name="Panel" type="Panel" parent="Label"]
layout_mode = 0
offset_left = 103.205
offset_top = -105.14
offset_right = 503.205
offset_bottom = 195.46
theme_override_styles/panel = SubResource("StyleBoxTexture_1hnlc")

[node name="PanelPrincipal" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.0
offset_top = -76.0
offset_right = -21.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Button" type="Button" parent="PanelPrincipal"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("6_1hnlc")
text = "Jugar"

[node name="AnimationComponent" type="Node" parent="PanelPrincipal/Button"]
script = ExtResource("2_2o76q")
hover_scale = Vector2(1.3, 1.2)
time = 0.2
metadata/_custom_type_script = "uid://yji5fyd27trl"

[node name="Button2" type="Button" parent="PanelPrincipal"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("6_1hnlc")
text = "Instrucciones"

[node name="AnimationComponent" type="Node" parent="PanelPrincipal/Button2"]
script = ExtResource("2_2o76q")
hover_scale = Vector2(1.3, 1.2)
time = 0.2
metadata/_custom_type_script = "uid://yji5fyd27trl"

[node name="Button3" type="Button" parent="PanelPrincipal"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("6_1hnlc")
text = "Creditos
"

[node name="AnimationComponent" type="Node" parent="PanelPrincipal/Button3"]
script = ExtResource("2_2o76q")
hover_scale = Vector2(1.3, 1.2)
time = 0.2
metadata/_custom_type_script = "uid://yji5fyd27trl"

[node name="Button4" type="Button" parent="PanelPrincipal"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("6_1hnlc")
text = "Salir"

[node name="AnimationComponent" type="Node" parent="PanelPrincipal/Button4"]
script = ExtResource("2_2o76q")
hover_scale = Vector2(1.3, 1.2)
time = 0.2
metadata/_custom_type_script = "uid://yji5fyd27trl"

[node name="PanelInstrucciones" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_ovrgc")

[node name="Panel" type="Panel" parent="PanelInstrucciones"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -68.0
offset_right = 100.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_2o76q")

[node name="Label" type="Label" parent="PanelInstrucciones/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -88.0
offset_right = 47.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_1hnlc")
text = "Instrucciones:
WASD
Espacio
"
horizontal_alignment = 1

[node name="ButtonClose" type="Button" parent="PanelInstrucciones"]
layout_mode = 1
offset_left = 220.0
offset_top = 112.0
offset_right = 240.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 8
text = "X"

[node name="AnimationComponent" type="Node" parent="PanelInstrucciones/ButtonClose"]
script = ExtResource("2_2o76q")
hover_scale = Vector2(1.3, 1.2)
time = 0.2
metadata/_custom_type_script = "uid://yji5fyd27trl"

[node name="PanelCreditos" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_2o76q")

[node name="Panel" type="Panel" parent="PanelCreditos"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -68.0
offset_right = 100.0
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6bivr")

[node name="Label" type="Label" parent="PanelCreditos/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -88.0
offset_right = 47.0
offset_bottom = 117.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_1hnlc")
text = "Integrantes:
Julio 
Rodrigo
Tark
Pietro
MAca
Pinwino
"
horizontal_alignment = 1

[node name="ButtonClose" type="Button" parent="PanelCreditos"]
layout_mode = 0
offset_left = 220.0
offset_top = 112.0
offset_right = 240.0
offset_bottom = 132.0
theme_override_font_sizes/font_size = 8
text = "X"

[node name="AnimationComponent" type="Node" parent="PanelCreditos/ButtonClose"]
script = ExtResource("2_2o76q")
hover_scale = Vector2(1.3, 1.1)
time = 0.4
metadata/_custom_type_script = "uid://yji5fyd27trl"

[connection signal="pressed" from="PanelPrincipal/Button" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="PanelPrincipal/Button2" to="." method="_on_Instrucciones_pressed"]
[connection signal="pressed" from="PanelPrincipal/Button3" to="." method="_on_Creditos_pressed"]
[connection signal="pressed" from="PanelPrincipal/Button4" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="PanelInstrucciones/ButtonClose" to="." method="_on_button_close_pressed"]
[connection signal="pressed" from="PanelCreditos/ButtonClose" to="." method="_on_button_close_pressed"]
